--- a/kadai_005.html
+++ b/kadai_005.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
 <html>
- <head>   
-  <mete charset="UTF-8">
-    <title>5章課題</title>
+ <head> 
+  <title>5章課題</title>  
+   <meta name="この課題は５章の課題です。">
+   <mete charset="UTF-8">
   </head>
+
   <body>
- <h1>私の趣味</h1>
-<br>
- <p>私は中学時代にサッカーを始めました。<br>
-    現在はサッカーのコーチとして活動をして、趣味のサッカーを楽しんでいます。</p>
-<img src="sample.jpg" alt="サッカーボールの画像">
-<p><a href="https://x.com/samuraijuku">私のプロフィールはこちら</a></p>
+    <h1>私の趣味</h1>
+    <p>
+      私は中学時代にサッカーを始めました。<br>現在はサッカーのコーチとして活動をして、趣味のサッカーを楽しんでいます。
+    </p>
+    <img src="sample.jpg" alt="サッカーボールの画像"><br>
+    <a href="https://x.com/samuraijuku">私のプロフィールはこちら</a>
   </body>
-</html>
+<html>
