--- a/kadai_005.html
+++ b/kadai_005.html
@@ -2,7 +2,7 @@
 <html>
  <head> 
   <title>5章課題</title>  
-   <meta name="この課題は５章の課題です。">
+  <meta name="description" content="このページは5章の課題です。"> 
    <mete charset="UTF-8">
   </head>
 
